Aura Changelog
==============

1.0.3.0
-------
- Support for `pacman-color` added.

1.0.2.2
-------
- Fixed parsing bug in `Bash`.
  If one package fell victim, a whole `-Au` session would fail.

1.0.2.1
-------
- Added License info to source files.
- Fixed virtual package recognition bug.
- Altered version conflict error message.
- Fixed bug in Bash parser that would occasionally break parsing.

1.0.2.0
-------
- Bug fixes.
- Extended the Bash parser. PKGBUILDs that had bash variables in their
  dependency arrays will now be parsed correctly.

1.0.1.0
-------
- German translation (use with --german).
  Thanks to Lukas Niederbremer!
- Spanish translation (use with --spanish)
  Thanks to Alejandro Gómez!
- Replaced regex-posix with regex-pcre.
- `-As` now highlights properly.
- Moved a number of modules to `Aura/`

1.0.0.0
-------
- Fixed `-V` message in terminals other than urxvt.
- New `haskell-ansi-terminal` library to do this.

0.10.0.0
--------
- Internet access moved to Network.Curl library.
- `Bash.hs` library created to help with PKGBUILD parsing.
  Can currently handle string expansions a la:
    "this-is-{awesome,neat}" => ["this-is-awesome","this-is-neat"]

0.9.2.3
-------
- Dependency determining speed up.
- Added AUR URL to `-Ai`.

0.9.3.2
-------
- Swedish translation.
  Thanks to Fredrik Haikarainen!

0.9.2.0
-------
- `-Ai` and `-As`!

0.9.1.0
-------
- `-Au` is about 20 times faster.

0.9.?.?
-------
- Polish translation.
  Thanks to Chris "Kwpolska" Warrick!
- Croatian translation.
  Thanks to Denis Kasak!

0.9.0.0
-------
- New `-O` operation for dealing with orphan packages.
- A man page!

0.8.0.0
-------
- Help message now supports multiple languages.
- Broke "no overlapping options" convention. 
`-Cz` is now `-Cb`.
- New option `-Ad`. Lists _all_ dependencies of an AUR package.
  This is to aid pre-building research.
  This option shows information you can't get from looking at PKGBUILDS!

0.7.3.0
-------