@@ -217,6 +217,8 @@ native characters. The available languages are, in option form:
 \-\-german, \-\-deutsch
 .P
 \-\-spanish, \-\-español
+.P
+\-\-portuguese, \-\-português
 .SH SEE ALSO
 .P
 \fBpacman\fR(8), \fBpacman.conf\fR(5), \fBmakepkg\fR(8)
@@ -240,3 +242,4 @@ Denis Kasak <denis.kasak@gmail.com> (Croatian)
 Fredrik Haikarainen (Swedish)
 Lukas Niederbremer <Lukas.Niederbremer@HS-Osnabrueck.de> (German)
 Alejandro Gómez <alejandroogomez@gmail.com> (Spanish)
+Henry "Ingvij" Kupty (Portuguese)
